 * Support WMV extended content metadata
 * Directory Demux can now sort items, ignore extensions and hidden files
 * Support SBV subtitles
 * Support AlbumArtist and DiscNumber metadata
 * Support SCTE-18 / EAS inside TS
 * Support raw h265/hevc files
 * Support multi-channel WAV without channel-maps
 * Rewrite MKV seeking
 * Fix Quicktime Mp4 inside MKV and unpacketized VC1

Stream filter:
 * Added ARIB STD-B25 TS streams decoder
 * Added stream prebuffering plugin
 * Removed HTTP Live streaming stream filter
 * Added zlib (a.k.a. deflate) decompression filter

Demux filter:
 * Added a demuxer filter chain to filter or intercept control commands and demuxing

Audio output:
 * Complete rewrite of the AudioTrack Android module, it is now the default
   module for Android. It now supports HDMI/SPDIF passthrough for AC3/DTS/EAC3,
   5.1/7.1 channels and float output, depending on the Android version.
 * Added Tizen audio module
 * HDMI/SPDIF pass-through support for WASAPI (AC3/DTS/EAC3/TRUEHD)
 * Support EAC3 and TRUEHD pass-through for PulseAudio

Audio filters:
 * Add SoX Resampler library audio filter module (converter and resampler)
 * a52tospdif and dtstospdif audio converters are merged into tospdif,
   this new converter can convert AC3, DTS, EAC3 and TRUEHD to a IEC61937 frame

Video ouput:
 * Linux/BSD default video output is now OpenGL, instead of Xvideo
 * Wayland shell surface window provider
 * Wayland shared memory video output
 * Large rework of the Android video outputs: there is now Surface (2.1, 2.2)
   NativeWindow (2.3+, supports hw rotation, subpicture blending, opaque)
 * Support rotation in Android NativeWindow output and hardware decoders
 * Renamed the Direct3D output module to Direct3D9
 * Added Direct3D11 video mode supporting both Windows desktop and WinRT modes,
   supporting subpicture blending and hardware acceleration
 * EFL Evas video output with Tizen TBM Surface support
 * New OpenGL provider for Windows

Text renderer: