@@ -49,3 +49,6 @@ libaccesstweaks_plugin_la_CFLAGS = $(AM_CFLAGS)
 libaccesstweaks_plugin_la_LDFLAGS = $(AM_LDFLAGS) -rpath '$(stream_filterdir)'
 stream_filter_LTLIBRARIES += $(LTLIBaccesstweaks)
 EXTRA_LTLIBRARIES += libaccesstweaks_plugin.la
+
+libadf_plugin_la_SOURCES = stream_filter/adf.c
+stream_filter_LTLIBRARIES += libadf_plugin.la
